# resume_tailor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/: cmd.sh  entrypoint.sh
input/: job_description.txt  resume.txt
src/resume_tailor/: crew.py  crew_outcome.py  crew_scores.py  documents.py  main.py  models.py  paths.py
src/resume_tailor/api/: app.py
src/resume_tailor/config/: agents.yaml  tasks.yaml
src/resume_tailor/knowledge/: ats_guidelines.txt
src/resume_tailor/tools/: resume_tools.py
web/: README.md
web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.tsx  index.css
